--- a/webroot/puril/css/main.css
+++ b/webroot/puril/css/main.css
@@ -87,7 +87,7 @@ footer {
   height: 40px;
 }
 .home-header-mv {
-  background: url(../images/header-bg-sp.png) no-repeat;
+  background: url(../images/header-bg-sp.jpg) no-repeat;
   background-size: cover;
   height: 100%;
 }
