--- a/webroot/css/datsumou.css
+++ b/webroot/css/datsumou.css
@@ -158,6 +158,8 @@ footer {
 }
 
 /* header */
+
+/*
 .menu-area label {
   height: 40px;
 }
@@ -218,6 +220,126 @@ footer {
 .menu-area input:checked + label + .menu-item {
   opacity: 1;
 }
+*/
+
+/*-- ハンバーガーメニュー  --*/
+.datsumou-header-inner__navToggle {
+  position: fixed;
+  top: 14px;
+  right: 10px;
+  z-index: 103;
+  display: block;
+  width: 16px;
+  height: 12px;
+  border: none;
+  background: transparent;
+  text-align: center;
+  cursor: pointer;
+}
+
+.datsumou-header-inner__navToggle span {
+  position: absolute;
+  left: 0;
+  display: block;
+  width: 16px;
+  height: 1px;
+  border-radius: 0.5px;
+  background-color: #13121e;
+  transition: 0.35s ease-in-out;
+}
+
+.datsumou-header-inner__navToggle span:nth-child(1) {
+  top: 0;
+}
+
+.datsumou-header-inner__navToggle span:nth-child(2) {
+  top: 6px;
+}
+
+.datsumou-header-inner__navToggle span:nth-child(3) {
+  top: 12px;
+}
+
+.datsumou-header-inner__navToggle.active span:nth-child(1) {
+  top: 6px;
+  transform: rotate(-45deg);
+}
+
+.datsumou-header-inner__navToggle.active span:nth-child(2),
+.datsumou-header-inner__navToggle.active span:nth-child(3) {
+  top: 6px;
+  transform: rotate(45deg);
+}
+
+.datsumou-header-inner__globalmenusp {
+  position: fixed;
+  top: 0;
+  right: 0;
+  transform: translateX(100%);
+  z-index: 102;
+  width: 260px;
+  height: 100vh;
+  background-color: #fbf9f7;
+  box-sizing: border-box;
+  transition: all 0.3s;
+}
+
+.datsumou-header-inner__globalmenusp.active {
+  transform: translateX(0);
+}
+
+.datsumou-header-inner__globalmenusp__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+  border-bottom: 1px solid #ccc4a7;
+}
+
+.datsumou-header-inner__globalmenusp__logo img {
+  display: block;
+  width: 57.57px;
+  height: auto;
+}
+
+.datsumou-header-inner__globalmenusp__linkboxs {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.datsumou-header-inner__globalmenusp__linkbox {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.datsumou-header-inner__globalmenusp__linkbox a {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: auto;
+  text-decoration: none;
+  font-size: 15px;
+  font-weight: 600;
+  color: #13131e;
+  line-height: 46px;
+}
+
+.datsumou-header-inner__globalmenusp__linkbox a:after {
+  position: absolute;
+  top: calc(50% - 8px);
+  right: 16px;
+  color: #d6ceb4;
+  font-size: 16px;
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\f054";
+}
+
+/*-- ハンバーガーメニュー ここまで --*/
 
 .datsumou-header {
   padding-top: 40px;
@@ -244,7 +366,7 @@ footer {
   height: 40px;
 }
 .datsumou-header-mv {
-  background: url(../../puril/images/datsumouheader-bg-sp.jpg) no-repeat;
+  background: url(../../puril/images/datsumouheader-bg-sp.png) no-repeat;
   background-size: 105%;
   height: 100%;
 }
