--- a/webroot/css/datsumou.css
+++ b/webroot/css/datsumou.css
@@ -293,7 +293,7 @@ footer {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: auto;
+  height: 80px;
   margin: 0 auto;
   border-bottom: 1px solid #ccc4a7;
 }
@@ -314,6 +314,7 @@ footer {
   display: block;
   width: 100%;
   height: auto;
+  border-bottom: 1px solid #e1e1e1;
 }
 
 .datsumou-header-inner__globalmenusp__linkbox a {
@@ -321,17 +322,19 @@ footer {
   display: block;
   width: 100%;
   height: auto;
+  padding-left: 15px;
+  box-sizing: border-box;
   text-decoration: none;
-  font-size: 15px;
-  font-weight: 600;
   color: #13131e;
   line-height: 46px;
 }
 
 .datsumou-header-inner__globalmenusp__linkbox a:after {
   position: absolute;
-  top: calc(50% - 8px);
+  top: 50%;
   right: 16px;
+  transform: translateY(-50%);
+  display: inline-block;
   color: #d6ceb4;
   font-size: 16px;
   font-family: "Font Awesome 5 Free";
@@ -366,7 +369,7 @@ footer {
   height: 40px;
 }
 .datsumou-header-mv {
-  background: url(../../puril/images/datsumouheader-bg-sp.png) no-repeat;
+  background: url(../../puril/images/datsumouheader-bg-sp.jpg) no-repeat;
   background-size: 105%;
   height: 100%;
 }
@@ -659,12 +662,18 @@ footer {
 .datsumou-evaluation-panel__list > li a {
   display: -webkit-box;
   display: flex;
+  align-items: flex-start;
   width: 100%;
+  padding-right: 30px;
+  box-sizing: border-box;
   color: #13121e;
   text-decoration: none;
 }
 .datsumou-evaluation-panel__list > li img {
-  margin-right: 1em;
+  display: block;
+  width: 55px;
+  height: auto;
+  margin-right: 10px;
 }
 .datsumou-evaluation-panel__text {
   font-size: 12px;
@@ -676,8 +685,8 @@ footer {
 }
 .datsumou-evaluation-panel__thin {
   margin-top: 0.5em;
+  font-size: 12px;
   color: #797152;
-  font-weight: bold;
 }
 .datsumou-evaluation-panel__star {
   margin-top: 0.5em;
