--- a/webroot/css/datsumou/ranking/index.css
+++ b/webroot/css/datsumou/ranking/index.css
@@ -2,164 +2,318 @@
   font-size: 18px;
   font-weight: bold;
   padding: 1em;
-  border-top: 1px solid #E0DCCC;
-  border-bottom: 1px solid #E0DCCC; }
+  border-top: 1px solid #e0dccc;
+  border-bottom: 1px solid #e0dccc;
+}
 
 .ranking-text {
-  padding: 1em 16px; }
+  padding: 1em 16px;
+}
 
 .ranking-category .ranking-category-item-wrap:last-child {
-  border-bottom: 1px solid #E0DCCC; }
+  border-bottom: 1px solid #e0dccc;
+}
 
 .ranking-category .ranking-category-item-wrap {
-  border-top: 1px solid #E0DCCC; }
-  .ranking-category .ranking-category-item-wrap .ranking-category-item {
-    padding: 2em 16px;
-    position: relative;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex; }
-    .ranking-category .ranking-category-item-wrap .ranking-category-item .ranking-category-item-icon {
-      color: #A9ACB9; }
-    .ranking-category .ranking-category-item-wrap .ranking-category-item .ranking-category-item-text {
-      font-size: 14px;
-      padding-left: .5em; }
+  border-top: 1px solid #e0dccc;
+}
+.ranking-category .ranking-category-item-wrap .ranking-category-item {
+  padding: 2em 16px;
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.ranking-category
+  .ranking-category-item-wrap
+  .ranking-category-item
+  .ranking-category-item-icon {
+  /* color: #a9acb9; */
+  color: #bebb9b;
+}
+.ranking-category
+  .ranking-category-item-wrap
+  .ranking-category-item
+  .ranking-category-item-text {
+  font-size: 14px;
+  padding-left: 0.5em;
+}
+
+.right-side-arrow {
+  right: 15px;
+  color: #d6ceb4;
+  font-size: 16px;
+}
+
+.right-side-arrow:before {
+  color: #d6ceb4;
+}
 
 .ranking-searchfrom .ranking-searchfrom-item-wrap:last-child {
-  border-bottom: 1px solid #E0DCCC; }
+  border-bottom: 1px solid #e0dccc;
+}
 
 .ranking-searchfrom .ranking-searchfrom-item-wrap {
-  border-top: 1px solid #E0DCCC; }
-  .ranking-searchfrom .ranking-searchfrom-item-wrap .ranking-searchfrom-item {
-    padding: 2em 16px;
-    position: relative;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex; }
-    .ranking-searchfrom .ranking-searchfrom-item-wrap .ranking-searchfrom-item .ranking-searchfrom-item-icon {
-      color: #A9ACB9; }
-    .ranking-searchfrom .ranking-searchfrom-item-wrap .ranking-searchfrom-item .ranking-searchfrom-item-text {
-      font-size: 14px;
-      padding-left: .5em; }
+  border-top: 1px solid #e0dccc;
+}
+.ranking-searchfrom .ranking-searchfrom-item-wrap .ranking-searchfrom-item {
+  padding: 2em 16px;
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.ranking-searchfrom
+  .ranking-searchfrom-item-wrap
+  .ranking-searchfrom-item
+  .ranking-searchfrom-item-icon {
+  color: #a9acb9;
+}
+.ranking-searchfrom
+  .ranking-searchfrom-item-wrap
+  .ranking-searchfrom-item
+  .ranking-searchfrom-item-text {
+  font-size: 14px;
+  padding-left: 0.5em;
+}
 
 .ranking-search-salon {
-  padding: 1.5em 16px; }
-  .ranking-search-salon .ranking-search-salon-title {
-    font-size: 16px;
-    font-weight: bold;
-    padding-bottom: 1em; }
-  .ranking-search-salon .ranking-search-salon-options {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-       -moz-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-       -moz-box-align: center;
-        -ms-flex-align: center;
-            align-items: center; }
-    .ranking-search-salon .ranking-search-salon-options .ranking-search-salon-option {
-      border: 2px solid #E0DCCC;
-      border-radius: .5em;
-      text-align: center;
-      padding: 1.5em 1em;
-      width: 50%; }
-    .ranking-search-salon .ranking-search-salon-options .ranking-search-salon-areastation {
-      margin-right: .5em; }
-    .ranking-search-salon .ranking-search-salon-options .ranking-search-salon-currentsite {
-      margin-left: .5em; }
-    .ranking-search-salon .ranking-search-salon-options .ranking-search-salon-option-text {
-      font-size: 14px;
-      padding-top: 1em; }
+  padding: 1.5em 16px;
+}
+.ranking-search-salon .ranking-search-salon-title {
+  font-size: 16px;
+  font-weight: bold;
+  padding-bottom: 1em;
+}
+.ranking-search-salon .ranking-search-salon-options {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -moz-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.ranking-search-salon
+  .ranking-search-salon-options
+  .ranking-search-salon-option {
+  border: 2px solid #e0dccc;
+  border-radius: 0.5em;
+  text-align: center;
+  padding: 1.5em 1em;
+  width: 50%;
+}
+.ranking-search-salon
+  .ranking-search-salon-options
+  .ranking-search-salon-areastation {
+  margin-right: 0.5em;
+}
+.ranking-search-salon
+  .ranking-search-salon-options
+  .ranking-search-salon-currentsite {
+  margin-left: 0.5em;
+}
+.ranking-search-salon
+  .ranking-search-salon-options
+  .ranking-search-salon-option-text {
+  font-size: 14px;
+  padding-top: 1em;
+}
 
 .ranking-shop {
-  background-color: #ffffff; }
-  .ranking-shop .ranking-shop-list {
-    background-color: #F9F7F5; }
-    .ranking-shop .ranking-shop-list .ranking-shop-item .ranking-shop-title {
-      padding: 1.5em 16px;
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -moz-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-align: center;
-      -webkit-align-items: center;
-         -moz-box-align: center;
-          -ms-flex-align: center;
-              align-items: center; }
-      .ranking-shop .ranking-shop-list .ranking-shop-item .ranking-shop-title .ranking-shop-title-icon-forth, .ranking-shop .ranking-shop-list .ranking-shop-item .ranking-shop-title .ranking-shop-title-icon-fifth {
-        background-color: #E1E1E1;
-        padding: .25em;
-        color: #595960; }
-      .ranking-shop .ranking-shop-list .ranking-shop-item .ranking-shop-title .ranking-shop-title-text {
-        font-size: 16px;
-        font-weight: bold;
-        padding-left: .5em; }
-    .ranking-shop .ranking-shop-list .ranking-shop-item .ranking-shop-photo-area {
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -moz-box;
-      display: -ms-flexbox;
-      display: flex; }
-      .ranking-shop .ranking-shop-list .ranking-shop-item .ranking-shop-photo-area .ranking-shop-photo {
-        width: 100%; }
-        .ranking-shop .ranking-shop-list .ranking-shop-item .ranking-shop-photo-area .ranking-shop-photo img {
-          width: 100%;
-          display: block; }
-    .ranking-shop .ranking-shop-list .ranking-shop-item .ranking-shop-label {
-      padding: 1em 16px;
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -moz-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-pack: justify;
-      -webkit-justify-content: space-between;
-         -moz-box-pack: justify;
-          -ms-flex-pack: justify;
-              justify-content: space-between; }
-      .ranking-shop .ranking-shop-list .ranking-shop-item .ranking-shop-label .ranking-shop-review {
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -moz-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-align: center;
-        -webkit-align-items: center;
-           -moz-box-align: center;
-            -ms-flex-align: center;
-                align-items: center; }
-      .ranking-shop .ranking-shop-list .ranking-shop-item .ranking-shop-label .ranking-shop-tag {
-        border: 1px solid #E0DCCC;
-        border-radius: .25em;
-        padding: .5em; }
-    .ranking-shop .ranking-shop-list .ranking-shop-item .ranking-shop-comment {
-      padding: 0em 16px 1em 16px; }
-      .ranking-shop .ranking-shop-list .ranking-shop-item .ranking-shop-comment .ranking-shop-comment-list {
-        background-color: #F9F7F5;
-        border-radius: .25em;
-        padding: .5em; }
-        .ranking-shop .ranking-shop-list .ranking-shop-item .ranking-shop-comment .ranking-shop-comment-list .ranking-shop-comment-item {
-          display: -webkit-box;
-          display: -webkit-flex;
-          display: -moz-box;
-          display: -ms-flexbox;
-          display: flex;
-          padding: .5em; }
-          .ranking-shop .ranking-shop-list .ranking-shop-item .ranking-shop-comment .ranking-shop-comment-list .ranking-shop-comment-item .ranking-shop-comment-text {
-            color: #B5B5B5;
-            border-bottom: 1px dotted #B5B5B5; }
-          .ranking-shop .ranking-shop-list .ranking-shop-item .ranking-shop-comment .ranking-shop-comment-list .ranking-shop-comment-item .ranking-shop-comment-user {
-            padding-left: 1em;
-            color: #595960; }
+  background-color: #ffffff;
+}
+.ranking-shop .ranking-shop-list {
+  background-color: #f9f7f5;
+}
+.ranking-shop-item {
+  border-top: 1px solid #e0dccc;
+  border-bottom: 1px solid #e0dccc;
+}
+.ranking-shop-item:first-child {
+  border-top: none;
+}
+.ranking-shop-item:last-child {
+  border-bottom: none;
+}
+.ranking-shop-item:not(:last-child) {
+  margin-bottom: 5px;
+}
+.ranking-shop-item:nth-child(1) .ranking-shop-title-icon {
+  color: #c4a63b !important;
+}
+.ranking-shop-item:nth-child(2) .ranking-shop-title-icon {
+  color: #a9acb9 !important;
+}
+.ranking-shop-item:nth-child(3) .ranking-shop-title-icon {
+  color: #bc8f6a !important;
+}
+.ranking-shop .ranking-shop-list .ranking-shop-item .ranking-shop-title {
+  padding: 1.5em 16px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.ranking-shop
+  .ranking-shop-list
+  .ranking-shop-item
+  .ranking-shop-title
+  .ranking-shop-title-icon-forth,
+.ranking-shop
+  .ranking-shop-list
+  .ranking-shop-item
+  .ranking-shop-title
+  .ranking-shop-title-icon-fifth {
+  background-color: #e1e1e1;
+  padding: 0.25em;
+  color: #595960;
+}
+.ranking-shop
+  .ranking-shop-list
+  .ranking-shop-item
+  .ranking-shop-title
+  .ranking-shop-title-text {
+  font-size: 16px;
+  font-weight: bold;
+  padding-left: 0.5em;
+}
+.ranking-shop .ranking-shop-list .ranking-shop-item .ranking-shop-photo-area {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.ranking-shop
+  .ranking-shop-list
+  .ranking-shop-item
+  .ranking-shop-photo-area
+  .ranking-shop-photo {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  box-sizing: border-box;
+}
+.ranking-shop
+  .ranking-shop-list
+  .ranking-shop-item
+  .ranking-shop-photo-area
+  .ranking-shop-photo
+  img {
+  width: 100%;
+  display: block;
+  border-right: 1px solid #e0dccc;
+}
+.ranking-shop
+  .ranking-shop-list
+  .ranking-shop-item
+  .ranking-shop-photo-area
+  .ranking-shop-photo:last-child
+  img {
+  width: 100%;
+  display: block;
+  border-right: none;
+  box-sizing: border-box;
+}
+.ranking-shop .ranking-shop-list .ranking-shop-item .ranking-shop-label {
+  padding: 1em 16px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -moz-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+.ranking-shop
+  .ranking-shop-list
+  .ranking-shop-item
+  .ranking-shop-label
+  .ranking-shop-review {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.ranking-shop
+  .ranking-shop-list
+  .ranking-shop-item
+  .ranking-shop-label
+  .ranking-shop-tag {
+  border: 1px solid #e0dccc;
+  border-radius: 0.25em;
+  padding: 0.5em;
+}
+.ranking-shop .ranking-shop-list .ranking-shop-item .ranking-shop-comment {
+  padding: 0em 16px 1em 16px;
+}
+.ranking-shop
+  .ranking-shop-list
+  .ranking-shop-item
+  .ranking-shop-comment
+  .ranking-shop-comment-list {
+  background-color: #f9f7f5;
+  border-radius: 0.25em;
+  padding: 0.5em;
+}
+.ranking-shop
+  .ranking-shop-list
+  .ranking-shop-item
+  .ranking-shop-comment
+  .ranking-shop-comment-list
+  .ranking-shop-comment-item {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0.5em;
+}
+.ranking-shop
+  .ranking-shop-list
+  .ranking-shop-item
+  .ranking-shop-comment
+  .ranking-shop-comment-list
+  .ranking-shop-comment-item
+  .ranking-shop-comment-text {
+  color: #b5b5b5;
+  border-bottom: 1px dotted #b5b5b5;
+}
+.ranking-shop
+  .ranking-shop-list
+  .ranking-shop-item
+  .ranking-shop-comment
+  .ranking-shop-comment-list
+  .ranking-shop-comment-item
+  .ranking-shop-comment-user {
+  padding-left: 1em;
+  color: #595960;
+}
