--- a/webroot/css/datsumou_bk_200131.css
+++ b/webroot/css/datsumou_bk_200131.css
@@ -279,11 +279,9 @@ footer {
   z-index: 102;
   width: 260px;
   height: 100vh;
-  background-color: #fff;
+  background-color: #fbf9f7;
   box-sizing: border-box;
   transition: all 0.3s;
-  overflow-y: scroll;
-  overflow-x: hidden;
 }
 
 .datsumou-header-inner__globalmenusp.active {
@@ -297,7 +295,6 @@ footer {
   width: 100%;
   height: 80px;
   margin: 0 auto;
-  background-color: #fbf9f7;
   border-bottom: 1px solid #ccc4a7;
 }
 
@@ -318,11 +315,9 @@ footer {
   width: 100%;
   height: auto;
   border-bottom: 1px solid #e1e1e1;
-  font-size: 15px;
 }
 
-.datsumou-header-inner__globalmenusp__link,
-.datsumou-header-inner__globalmenusp__submenu a {
+.datsumou-header-inner__globalmenusp__linkbox a {
   position: relative;
   display: block;
   width: 100%;
@@ -333,11 +328,8 @@ footer {
   color: #13131e;
   line-height: 46px;
 }
-.datsumou-header-inner__globalmenusp__link {
-  padding-left: 40px!important;
-}
-.datsumou-header-inner__globalmenusp__link::after,
-.datsumou-header-inner__globalmenusp__submenu a::after {
+
+.datsumou-header-inner__globalmenusp__linkbox a:after {
   position: absolute;
   top: 50%;
   right: 16px;
@@ -349,100 +341,6 @@ footer {
   font-weight: 900;
   content: "\f054";
 }
-.datsumou-header-inner__globalmenusp__link.close:after {
-  position: absolute;
-  top: 50%;
-  right: 17px;
-  transform: translateY(-50%);
-  display: inline-block;
-  color: #d6ceb4;
-  font-size: 14px;
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  content: "\f078";
-}
-.datsumou-header-inner__globalmenusp__link.open:after {
-  position: absolute;
-  top: 50%;
-  right: 17px;
-  transform: translateY(-50%);
-  display: inline-block;
-  color: #d6ceb4;
-  font-size: 14px;
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  content: "\f077";
-}
-
-.datsumou-header-inner__globalmenusp__link.close + .datsumou-header-inner__globalmenusp__submenu {
-  display: none;
-}
-.datsumou-header-inner__globalmenusp__link[data-icon="home"]::before {
-  content: "";
-  position: absolute;
-  left: 15px;
-  top: 0;
-  bottom: 0;
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  content: "\f015";
-  color: #beba9b;
-  font-size: 15px;
-}
-.datsumou-header-inner__globalmenusp__link[data-icon="ranking"]::before {
-  content: "";
-  position: absolute;
-  left: 15px;
-  top: 0;
-  bottom: 0;
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  content: "\f521";
-  color: #beba9b;
-  font-size: 15px;
-}
-.datsumou-header-inner__globalmenusp__link[data-icon="search"] {
-  background: url(../../puril/images/ico_search.svg) 15px center no-repeat;
-  background-size: 15px auto;
-}
-.datsumou-header-inner__globalmenusp__link[data-icon="search_shop"] {
-  background: url(../../puril/images/ico_shop.svg) 15px center no-repeat;
-  background-size: 17px auto;
-}
-.datsumou-header-inner__globalmenusp__link[data-icon="contact"] {
-  background: url(../../puril/images/ico_mail.svg) 15px center no-repeat;
-  background-size: 17px auto;
-}
-
-.datsumou-header-inner__globalmenusp__submenu {
-  background-color: #fbf9f7;
-}
-.datsumou-header-inner__globalmenusp__submenu li {
-  border-top: 1px solid #e1e1e1;
-  font-size: 13px;
-}
-.datsumou-header-inner__globalmenusp__submenu a {
-  display: block;
-}
-
-.datsumou-header-inner__globalmenusp__sns {
-  display: flex;
-  padding: 20px 0;
-  font-size: 24px;
-}
-.datsumou-header-inner__globalmenusp__sns__item {
-  width: 25%;
-  text-align: center;
-  text-decoration: none;
-  color: #6aadbf;
-}
-.datsumou-header-inner__globalmenusp__sns__item span {
-  display: block;
-  padding-top: 8px;
-  color: #13131e;
-  font-size: 12px;
-}
-
 
 /*-- ハンバーガーメニュー ここまで --*/
 
