--- a/index.css
+++ b/index.css
@@ -121,13 +121,9 @@
     -webkit-justify-content: space-between;
        -moz-box-pack: justify;
         -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-       -moz-box-align: center;
-        -ms-flex-align: center;
-            align-items: center; }
+            justify-content: space-between;}
     .search-shop-best .search-shop-best-list .search-shop-best-item {
+      width: 33%;
       text-align: center; }
       .search-shop-best .search-shop-best-list .search-shop-best-item .search-shop-best-rank {
         display: -webkit-box;
