--- a/webroot/css/datsumou/search/index.css
+++ b/webroot/css/datsumou/search/index.css
@@ -65,10 +65,11 @@
       .search-shop .search-shop-list .search-shop-item .search-shop-photo-area .search-shop-photo {
         border-left: 1px solid #fff;
         border: 1px solid #e0dccc;
+        background-color: #F8F8F8;
         border-right: none;
         width: 100%; }
-        .search-shop .search-shop-list .search-shop-item .search-shop-photo-area .search-shop-photo:nth-of-type(1) {
-          border-left: none;}
+        .search-shop .search-shop-list .search-shop-item .search-shop-photo-area .search-shop-photo:last-child {
+          border-right: 1px solid #e0dccc;}
         .search-shop .search-shop-list .search-shop-item .search-shop-photo-area .search-shop-photo img {
           width: 100%;
           display: block;
