--- a/webroot/css/datsumou/common.css
+++ b/webroot/css/datsumou/common.css
@@ -279,7 +279,7 @@
   display: -moz-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 1em .5em; }
+  padding: 15px 8px 15px 8px; }
   .shop-footer .kuchikomi-button {
     width: 60%;
     background-color: #FF4E4E; }
