--- a/webroot/css/datsumou.css
+++ b/webroot/css/datsumou.css
@@ -766,7 +766,7 @@ body {
   font-weight: 900;
   content: "\f054";
 }
-.datsumou-evaluation-panel__list > li a {
+.datsumou-evaluation-panel__list > li .voice-box {
   display: -webkit-box;
   display: flex;
   align-items: flex-start;
@@ -775,6 +775,10 @@ body {
   box-sizing: border-box;
   color: #13121e;
   text-decoration: none;
+}
+.datsumou-evaluation-panel__list > li .voice-box a{
+  text-decoration: none;
+  color: #13121e;
 }
 .datsumou-evaluation-panel__list > li img {
   display: block;
