--- a/webroot/puril/css/main.css
+++ b/webroot/puril/css/main.css
@@ -493,6 +493,7 @@ footer {
 }
 .home-evaluation-panel__text {
   font-size:12px;
+  width: calc( 100% - 100px );
 }
 .home-evaluation-panel__title {
   font-size:14px;
