--- a/webroot/css/datsumou.css
+++ b/webroot/css/datsumou.css
@@ -789,6 +789,7 @@ body {
 .datsumou-evaluation-panel__text {
   font-size: 12px;
   text-align: left;
+  width: calc( 100% - 100px );
 }
 .datsumou-evaluation-panel__title {
   font-size: 14px;
