--- a/webroot/puril/css/main.css
+++ b/webroot/puril/css/main.css
@@ -482,10 +482,16 @@ footer {
   width: 100%;
   color: #13121E;
   text-decoration: none;
+  padding-right: 30px;
 }
 .home-evaluation-panel__list > li .voice-box a{
   text-decoration: none;
   color: #13121E;
+}
+
+.home-evaluation-panel__list > li .voice-box a.home-evaluation-panel__list__img{
+  width: 100px;
+  display: block;
 }
 .home-evaluation-panel__list > li img {
   margin-right: 1em;
