--- a/index.css
+++ b/index.css
@@ -92,6 +92,9 @@
             -ms-flex-align: center;
                 align-items: center; }
     .search-shop .search-shop-list .search-shop-item .search-shop-desc {
+      display: block;
+      text-decoration: none;
+      color: #13131E;
       padding: 0.5em 16px 0 16px; }
       .search-shop .search-shop-list .search-shop-item .search-shop-desc .search-shop-desc-title {
         font-size: 14px;
