--- a/webroot/css/datsumou.css
+++ b/webroot/css/datsumou.css
@@ -273,7 +273,7 @@ body {
 .datsumou-header-inner__navToggle.active span:nth-child(2),
 .datsumou-header-inner__navToggle.active span:nth-child(3) {
   top: 6px;
-  transform: rotate(45deg);
+  transform: rotate(45deg);.datsumou-header-inner
 }
 
 .datsumou-header-inner__globalmenusp {
@@ -471,6 +471,7 @@ body {
   align-items: center;
   width: 100%;
   max-width: 600px;
+  border-bottom: 1px solid #e1ddcc;
 
   background-color: #fff;
   padding-right: 10px;
